Added info for Rust and C#

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             Programming course. After four years, I had to conduct the course myself as a teacher and
                             that is when I fell in love with the book, "C Programming: A Modern Approach", by K.N King.
                             Not only it taught me the ins and outs of C, but also it taught me how to learn a
-                            programming language and stay up to date with it.
+                            programming language systematically and stay up to date with it.
                         </p>
                     </div>
                 </div>
@@ -187,8 +187,32 @@
                     </div>
                 </div>
 
-                <div class="skill-item"><i class="devicon-rust-plain" title="Rust"></i></div>
-                <div class="skill-item"><i class="devicon-csharp-plain" title="C#"></i></div>
+                <div class="skill-item" onclick="displayOnModal(this)">
+                    <i class="devicon-rust-plain" title="Rust"></i>
+                    <div class="modal-candidate">
+                        <h2> <i class="devicon-rust-plain modal-icon"></i> The Rust Programming Language </h2>
+                        <p> Because of my love for low level programming languages, sooner or later I had to learn
+                            Rust. I finally ended up learning it in 2025. Since I do not like using dynamically
+                            typed languages except for scripting and some other tasks, Rust has become my go to for
+                            creating small tools for everyday tasks. Also, it is nice for asynchronous programming and
+                            designing server apps, all managed with a nice project and package manager. And yes, I do
+                            acknowledge the difficulty of both learning and remembering Rust. Hey, what matters is that
+                            I like it. Also, the Rust book is really nice. </p>
+                    </div>
+                </div>
+
+                <div class="skill-item" onclick="displayOnModal(this)">
+                    <i class="devicon-csharp-plain" title="C#"></i>
+                    <div class="modal-candidate">
+                        <h2> <i class="devicon-csharp-plain"></i> The C# Programming Language and .NET </h2>
+                        <p> Among all the languages I have listed here, this is most likely the first one I encountered
+                            in my life. A high school kid sat with Visual Studio one day and discovered programming. I
+                            ended up formally learning it at end of the second year of my Bachelors study. I do not like
+                            Java. So, C# is a good choice when I am feeling lazy and need to develop a GUI application
+                            for Windows, especially using WPF. I like C# but I find it to be bloated, even in the latest
+                            frameworks. But this is the only full OOP enforced language that I like. </p>
+                    </div>
+                </div>
                 <div class="skill-item"><i class="devicon-python-plain" title="Python"></i></div>
                 <div class="skill-item"><i class="devicon-lua-plain" title="Lua"></i></div>
                 <div class="skill-item"><i class="devicon-latex-plain" title="LaTeX"></i></div>
